--- a/store/templates/navber.html
+++ b/store/templates/navber.html
@@ -30,15 +30,14 @@
                                 <li><hr class="dropdown-divider" /></li>
                                 <li><a class="dropdown-item" href="{% url 'category' 'Komronbek' %}">Komronbek</a></li>
                                 <li><a class="dropdown-item" href="{% url 'category' 'gsfvgfvsdkv' %}">nimadir</a></li>
-                            </ul>
+                            </ul><br/><br/>
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
+
+<a href="{% url 'cart_summary' %}" class="btn btn-outline-dark"><i class="bi-cart-fill me-1"></i>
+                                    Cart
+<span class="badge bg-dark text-white ms-1 rounded-pill">0</span></a>
                     </form>
                 </div>
             </div>
