--- a/store/templates/product.html
+++ b/store/templates/product.html
@@ -36,6 +36,7 @@
                 
                 {% else %}
                     ${{ product.price }}
+                    <br/>ID: {{ product.id }}
 
                 {% endif%}
 
@@ -44,11 +45,10 @@
 
 <br>
               <a href="{% url 'home'%}" class="btn btn-secondary">Home</a>
-            </center>
-
+              <button type="button" value="{{ product.id }}" class="btn btn-secondary" id="add-cart">Add To Cart</button>
             
             
-            
+            </center>             
         </div>
     </div>
 </div>
@@ -58,6 +58,38 @@
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
 <br/></br/>
+
+<script>
+
+// Check if button pressed
+
+$(document).on('click', '#add-cart', function(e){
+    e.preventDefault();
+    $.ajax({
+      type: 'POST',
+      url: '{% url 'cart_add' %}',
+      data: {
+        product_id: $('#add-cart').val(),
+        csrfmiddlewaretoken: '{{ csrf_token }}',
+        actions: 'post'
+      },
+
+      success: function(json){
+        console.log(json)
+      },
+
+      error: function(xhr, errmsg, err){
+        
+      }
+
+
+
+    });
+
+
+})
+
+</script>
 
 
 
