--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -7,15 +7,75 @@
 
 {% block content %}
          <!--header-->
-            <header class="bg-dark text-white py-5">
-                <div class="container px-4 px-lg-5">
-                    <div class="text-center text-uppercase">
-                        <h1 class="mb-4">Shopping Cart</h1>
-                        <p class="lead">view Your cart... </p>
+        <header class="bg-dark text-white py-5">
+            <div class="container px-4 px-lg-5">
+                <div class="text-center text-uppercase">
+                    <h1 class="mb-4">Shopping Cart</h1>
+                    <p class="lead">view Your cart... </p>
+                </div>
+            </div>
+        </header>
+            <br/>
+
+        <div class="container">
+        {% if cart_products %}
+            {% for product in cart_products %}
+
+                <div class="container">
+                                    <br/>
+                    <div class="card mb-3" >
+                        <div class="row g-0">
+                          <div class="col-md-4">
+                            <img src="{{ product.image.url }}" class="img-fluid rounded-start" alt="...">
+                          </div>
+                          <div class="col-md-8">
+                            <div class="card-body">
+                            <center>
+                              <h5 class="card-title">{{ product.name}}</h5>
+                              <p class="card-text">{{ product.description }}</p>
+                                  
+                                {% if product.is_sale %}
+                    
+                    
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    &nbsp; &nbsp; Sale! &nbsp; &nbsp;
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                    
+                                    <!-- Product price-->
+                                <strike>${{ product.price }}</strike>
+                                &nbsp;
+                                ${{ product.sale_price }}
+                                     
+                                    
+                                <br/>
+                                In: {{ product.category }}
+                                
+                                {% else %}
+                                    ${{ product.price }}
+                                    <br/>ID: {{ product.id }}
+                    
+                                {% endif%}
+                                        <br>
+                              <a href="{% url 'home'%}" class="btn btn-secondary">Home</a>
+                              <button type="button" value="{{ product.id }}" class="btn btn-secondary" id="add-cart">Add To Cart</button>
+                                
+                                
+                            </center>             
+                        </div>
                     </div>
                 </div>
-            </header>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            </div>
+
+            {% endfor %}
+            {% else %}
+            
+            Nothing in your cart....
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        {% endif %}
+        </div>
+
 {% endblock%}
