--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -57,7 +57,30 @@
                                     <br/>ID: {{ product.id }}
                     
                                 {% endif%}
-                                        <br>
+                                    <br/><br/>
+                                <div class="row justify-content-center">
+                            <div class="col-md-2"style="width: 100px; height: 30px;">Quantity:</div>
+                                        <div class="col-md-2">
+                                      
+                                        <select class="form-select form-select-sm" id="qty-cart" style="width: 100px; height: 38px;">
+
+                                    {% for key, value in quantities.items %}
+                                        {% if key  == product.id|slugify %}
+                                    <option selected> {{ value }} </option>
+                                        {% endif %}
+                                    {% endfor %}
+
+
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                    </div>
+                                </div>
+
+                                    <br/><br>
                               <a href="{% url 'home'%}" class="btn btn-secondary">Home</a>
                               <button type="button" value="{{ product.id }}" class="btn btn-secondary" id="add-cart">Add To Cart</button>
                                 
