--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -91,8 +91,8 @@
             </div>
 
             {% endfor %}
+            <h3>Total: ${{ totals }} </h3>
             {% else %}
-            
             Nothing in your cart....
             <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
             <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
