--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -145,7 +145,7 @@ $(document).on('click', '.delete-product', function(e){
       },
       success: function(json){
         //console.log(json)
-       // document.getElementById("cart_quantity").textContent = json.qty
+        document.getElementById("cart_quantity").textContent = json.qty
         location.reload();
       },
       error: function(xhr, errmsg, err){     
