--- a/store/templates/navber.html
+++ b/store/templates/navber.html
@@ -13,6 +13,8 @@
                         
                 {% if user.is_authenticated %}
 
+                        <li class="nav-item"><a class="nav-link" href="{%   url 'update_user' %}">profile</a></li>
+
                         <li class="nav-item"><a class="nav-link" href="{%   url 'logout' %}">logout</a></li>
                 
                     {% else %}  
