--- a/store/templates/update_password.html
+++ b/store/templates/update_password.html
@@ -4,8 +4,8 @@
     <header class="bg-dark text-white py-5">
         <div class="container px-4 px-lg-5">
             <div class="text-center text-uppercase">
-                <h1 class="mb-4">Update user profile ...</h1>
-                <p class="lead">Update user profile ...</p>
+                <h1 class="mb-4">update Password ...</h1>
+                <p class="lead">Update User Password...</p>
             </div>
         </div>
     </header>
@@ -14,15 +14,15 @@
             <center>
                 <div class="col-md-6 offset-mb-3">
                     <br/><br>
-                    <form method="POST" actions="{% url 'update_user' %}">
+                    <form method="POST" actions="{% url 'update_password' %}">
                             {% csrf_token %}
 
-                            {{ user_form.as_p  }}
+                            {{ form.as_p  }}
                             <br/></br/>
-                            <button type="submit" class="btn btn-secondary">Update profile</button>
+                            <button type="submit" class="btn btn-secondary">update password</button>
+                        
                     </form>
 <br/></br/>
-<a href="{% url 'update_password' %}" class="btn btn-secondary"> update password </a>
 <br/></br/>
 <br/></br/>
 <br/></br/>
