--- a/store/templates/navber.html
+++ b/store/templates/navber.html
@@ -13,7 +13,22 @@
                         
                 {% if user.is_authenticated %}
 
-                        <li class="nav-item"><a class="nav-link" href="{%   url 'update_user' %}">profile</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">profile</a>
+                               
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{% url 'update_user' %}">User profile</a></li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li><a class="dropdown-item" href="{% url 'update_info' %}">user info </a></li>
+
+                                </ul>
+                                <br/><br/>
+                            </li>
+                        </ul>
+
+
+
+
 
                         <li class="nav-item"><a class="nav-link" href="{%   url 'logout' %}">logout</a></li>
                 
