--- a/store/templates/navber.html
+++ b/store/templates/navber.html
@@ -8,6 +8,8 @@
                         
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home'%}">Home</a></li>
                         
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'search'%}">Search</a></li>
+                        
                         
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                         
@@ -22,13 +24,8 @@
                                     <li><a class="dropdown-item" href="{% url 'update_info' %}">user info </a></li>
 
                                 </ul>
-                                <br/><br/>
                             </li>
                         </ul>
-
-
-
-
 
                         <li class="nav-item"><a class="nav-link" href="{%   url 'logout' %}">logout</a></li>
                 
