--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -91,7 +91,10 @@
             </div>
 
             {% endfor %}
+            <div align="right">
             <h3>Total: ${{ totals }} </h3>
+            <a href="{% url 'checkout' %}" class="btn btn-success"> Checkout </a>
+            </div>
             {% else %}
             Nothing in your cart....
             <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
