--- a/payment/templates/billing_info.html
+++ b/payment/templates/billing_info.html
@@ -65,7 +65,23 @@
     <br/>
     <a href="{% url 'checkout' %}" class="btn btn-outline-secondary"> update Shipping</a>
     </div>
-  </div>
+</div>
+  <br/><br/>
+
+<div class="card">
+    <div class="card-header">
+    billing info
+    </div>
+    <div class="card-body"> 
+        {{ billing_form.as_p }}
+        <br/>   
+        
+    </div>
+</div>
+<br/>
+
+
+
 
 <a href="#" class="btn btn-secondary">PAy Now</a>
 
