--- a/payment/templates/not_shipped_dash.html
+++ b/payment/templates/not_shipped_dash.html
@@ -7,7 +7,33 @@
             <center>
                 <div class="col-8">
                     <br/><br/>
-                    <h3> Un- shipped dash </h3>
+                    <h3> Un- shipped dash  </h3>
+                    
+                    <table class="table table-striped table-hover table-bordered">
+                        <thead class="table-dark">
+                          <tr>
+                            <th scope="col">orders</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Customer Email </th>
+                            <th scope="col">Date ordered  </th>
+                          </tr>
+                        </thead>
+
+                        <tbody>
+                          {%for item in orders %}
+                          <tr> 
+                            <td>{{ item.id }}</td>
+                            <td>${{ item.amount_paid }}</td>
+                            <td>{{ item.email }}</td>
+                            <td>{{ item.date_ordered }}</td>
+                          </tr>
+                          {% endfor %}
+  
+
+                        </tbody>
+                      </table>
+
+
                 </div>
             </center>
         </div>
