--- a/payment/templates/orders.html
+++ b/payment/templates/orders.html
@@ -28,7 +28,22 @@
 
 
                             {% endfor %}
-
+                            <br/><br/>
+                            {% if not order.shipped %}
+                            <form method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="shipping_status" value="true">
+                                <button type="Submit" class="btn btn-success">Mark As shipped</button>
+                            </form>
+                            
+                            {% else %}
+                            <form method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="shipping_status" value="false">
+                                <button type="Submit" class="btn btn-danger">Mark As not  shipped</button>
+                            </form>
+                            <!-- not shipped-->
+                            {% endif %}
                             
 
                         </div>
