--- a/payment/templates/not_shipped_dash.html
+++ b/payment/templates/not_shipped_dash.html
@@ -16,6 +16,7 @@
                             <th scope="col">Price</th>
                             <th scope="col">Customer Email </th>
                             <th scope="col">Date ordered  </th>
+                            <th scope="col">Shipped </th>
                           </tr>
                         </thead>
 
@@ -26,6 +27,15 @@
                             <td>${{ item.amount_paid }}</td>
                             <td>{{ item.email }}</td>
                             <td>{{ item.date_ordered }}</td>
+                            <td>
+                              <form method="POST">
+                                {% csrf_token %}
+                                <input type="hidden"  name="shipping_status" value="true">
+                                <input type="hidden" name="num" value={{item.id}}>
+                                <button type="Submit" class="btn btn-success btn-sm">Mark Shipped </button>
+                              </form>
+
+                            </td>
                           </tr>
                           {% endfor %}
   
