--- a/payment/templates/shipped_dash.html
+++ b/payment/templates/shipped_dash.html
@@ -15,9 +15,10 @@
                             <th scope="col">Price</th>
                             <th scope="col">Customer Email </th>
                             <th scope="col">Date shipped  </th>
+                            <th scope="col">Shipped </th>
                           </tr>
                         </thead>
-
+                        
                         <tbody>
                           {%for item in orders %}
                           <tr> 
@@ -25,6 +26,15 @@
                             <td>${{ item.amount_paid }}</td>
                             <td>{{ item.email }}</td>
                             <td>{{ item.date_shipped }}</td>
+                            
+                            <td>
+                              <form method="POST">
+                                {% csrf_token %}
+                                <input type="hidden"  name="shipping_status" value="false">
+                                <input type="hidden" name="num" value={{item.id}}>
+                                <button type="Submit" class="btn btn-danger btn-sm">Mark un Shipped </button>
+                              </form>
+                            </td>
                           </tr>
                           {% endfor %}
   
